                  Fri Jun 29 19:37:29 UTC 2007


Directory tools/scripts
 fetch-trace               Locally Modified          144 

Updating with simcore changes (rev. 2369 - Carl Beckmann)

- Patch provided by Steven King, that allows DPG fetch_trace to be
disabled if DPG_FETCH_TRACE set to the empty string or 0 in the asimrc file.
This is useful if fetch_trace is not available at your site.
Rsync also prints progress as it fetches from the MMDC trace disks.

----------
spartha1    Date: Fri Jun 29 15:39:38 EDT 2007  CSN: CSN-asimcore-146
                  Fri Jun 29 19:39:38 UTC 2007


Directory modules/controller/classic
 control_x86.cpp           Locally Modified          145 
 main_x86.cpp              Locally Modified          145 

Updating with simcore changes (rev. 2370 - Chris Weaver)

compile fixes

----------
spartha1    Date: Fri Jun 29 15:43:37 EDT 2007  CSN: CSN-asimcore-147
                  Fri Jun 29 19:43:37 UTC 2007


Directory tools/scripts
 asim-run                  Locally Modified          145 

Updating with simcore changes (rev. 2372 - Krishna Rangan)

- fix for attempting to read nthreds when no argument to experiment is available.

----------
spartha1    Date: Fri Jun 29 16:04:03 EDT 2007  CSN: CSN-asimcore-148
                  Fri Jun 29 20:04:03 UTC 2007


Directory lib/libasim/include/asim
 port.h                    Locally Modified          147 

Updating with simcore changes (rev. 2375 - Brian Slechta)

added Look() and Delay() functions to BufferStorage and StallPort. these were
added to facillitate the stalling of longer latency ports.

----------
spartha1    Date: Fri Jun 29 16:36:48 EDT 2007  CSN: CSN-asimcore-149
                  Fri Jun 29 20:36:48 UTC 2007


Directory lib/libasim/include/asim
 syntax.h                  Locally Modified          148 

Updating with simcore changes (rev. 2376 - Krishna Rangan)

- revised UINT128 declaration that causes gcc 3.4.3 compiler
to hang on 64 bit machines.